--- a/TheBeaver/fe/package.json
+++ b/TheBeaver/fe/package.json
@@ -9,7 +9,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.17",
+    "vue-annotator": "^0.13.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "webpack-merge": "^4.1.4"
