--- a/TheBeaver/be/package.json
+++ b/TheBeaver/be/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "mongodb": "^3.1.10",
     "twitter": "^1.7.1"
   }
 }
