connection successful with mongo

--- a/TheBeaver/be/package.json
+++ b/TheBeaver/be/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.10",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "mongoose": "*"
   }
 }
