--- a/TheBeaver/be/package.json
+++ b/TheBeaver/be/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "deploy": "now && now alias"
   },
   "author": "",
   "license": "ISC",
