--- a/TheBeaver/fe/package.json
+++ b/TheBeaver/fe/package.json
@@ -15,17 +15,18 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "serve": "^9.4.0",
     "vue": "^2.5.17",
     "vue-annotator": "^0.13.2",
     "vue-core-image-upload": "^2.4.11",
     "vue-facebook-signin-button": "^1.0.1",
+    "vue-highlight-words": "^0.1.3",
     "vue-router": "^3.0.1",
     "vue-session": "^1.0.0",
     "vue-text-highlight": "^1.1.2",
     "vue-upload-image": "^1.1.0",
     "vuex": "^3.0.1",
-    "webpack-merge": "^4.1.4",
-    "serve": "^9.4.0"
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
