--- a/TheBeaver/fe/package.json
+++ b/TheBeaver/fe/package.json
@@ -14,10 +14,12 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "node-sass": "^4.11.0",
+    "pc-bootstrap4-datetimepicker": "^4.17.50",
     "sass-loader": "^7.1.0",
     "serve": "^9.4.0",
     "vue": "^2.5.17",
     "vue-annotator": "^0.13.2",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-core-image-upload": "^2.4.11",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-highlight-words": "^0.1.3",
