--- a/TheBeaver/fe/package.json
+++ b/TheBeaver/fe/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "scriptjs": "^2.5.9",
     "serve": "^9.4.0",
     "vue": "^2.5.17",
     "vue-annotator": "^0.13.2",
