--- a/TheBeaver/fe/package.json
+++ b/TheBeaver/fe/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
+    "jquery-confirm": "^3.3.3",
     "node-sass": "^4.11.0",
     "pc-bootstrap4-datetimepicker": "^4.17.50",
     "sass-loader": "^7.1.0",
@@ -28,7 +30,8 @@
     "vue-text-highlight": "^1.1.2",
     "vue-upload-image": "^1.1.0",
     "vuex": "^3.0.1",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "window": "^4.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
