--- a/TheBeaver/fe/package.json
+++ b/TheBeaver/fe/package.json
@@ -22,6 +22,7 @@
     "vue-annotator": "^0.13.2",
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-core-image-upload": "^2.4.11",
+    "vue-datetime-picker": "^0.2.1",
     "vue-facebook-signin-button": "^1.0.1",
     "vue-highlight-words": "^0.1.3",
     "vue-router": "^3.0.1",
