--- a/TheBeaver/reversegeoApi/package.json
+++ b/TheBeaver/reversegeoApi/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "deploy": "now && now alias"
   },
   "dependencies": {
     "axios": "^0.18.0",
